compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:89:22: error: no match for ‘operator>>’ (operand types are ‘std::ostream’ {aka ‘std::basic_ostream<char>’} and ‘const char [8]’)
             std::cerr>>"MESSAGE"<<endl;
             ~~~~~~~~~^~~~~~~~~~~
In file included from /usr/include/c++/8/string:53,
                 from /usr/include/c++/8/stdexcept:39,
                 from /usr/include/c++/8/array:39,
                 from /main.cpp:1:
/usr/include/c++/8/bits/basic_string.tcc:1465:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^~~~~~~~
/usr/include/c++/8/bits/basic_string.tcc:1465:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/istream:991,
                 from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/bits/istream.tcc:931:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)’
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^~~~~~~~
/usr/include/c++/8/bits/istream.tcc:931:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/istream:756:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)’
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^~~~~~~~
/usr/include/c++/8/istream:756:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/istream:761:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)’
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^~~~~~~~
/usr/include/c++/8/istream:761:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/istream:991,
                 from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/bits/istream.tcc:963:5: note: candidate: ‘template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)’
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^~~~~~~~
/usr/include/c++/8/bits/istream.tcc:963:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/istream:803:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)’
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^~~~~~~~
/usr/include/c++/8/istream:803:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/istream:808:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)’
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^~~~~~~~
/usr/include/c++/8/istream:808:5: note:   template argument deduction/substitution failed:
/main.cpp:89:24: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
             std::cerr>>"MESSAGE"<<endl;
                        ^~~~~~~~~
In file included from /usr/include/c++/8/iostream:40,
                 from /main.cpp:4:
/usr/include/c++/8/istream:980:5: note: candidate: ‘template<class _Istream, class _Tp> typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_istream<_Istream>, std::__is_extractable<typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type, _Tp&&, void> >::value, typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type>::type std::operator>>(_Istream&&, _Tp&&)’
     operator>>(_Istream&& __is, _Tp&& __x)
     ^~~~~~~~
/usr/include/c++/8/istream:980:5: note:   template argument deduction/substitution failed:
/usr/include/c++/8/istream: In substitution of ‘template<class _Istream, class _Tp> typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_istream<_Istream>, std::__is_extractable<typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type, _Tp&&, void> >::value, typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type>::type std::operator>>(_Istream&&, _Tp&&) [with _Istream = std::basic_ostream<char>&; _Tp = const char (&)[8]]’:
/main.cpp:89:24:   required from here
/usr/include/c++/8/istream:980:5: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
/main.cpp:89:35: error: ‘endl’ was not declared in this scope
             std::cerr>>"MESSAGE"<<endl;
                                   ^~~~
/main.cpp:89:35: note: suggested alternative:
In file included from /usr/include/c++/8/iostream:39,
                 from /main.cpp:4:
/usr/include/c++/8/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^~~~
/main.cpp: In function ‘int main()’:
/main.cpp:148:49: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                 if(reader.dataArray[i].dataIndex<min)
/main.cpp:180:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
             for(int i=0; i<reader.receivedPieces.size(); i++)
                          ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:182:29: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
             for(int j=i+1; j<reader.receivedPieces.size(); j++)
                            ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:192:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for(int i=0; i<reader.receivedPieces.size(); i++)
                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:109:9: warning: unused variable ‘z’ [-Wunused-variable]
     int z=0;
         ^